--- a/home.html
+++ b/home.html
@@ -81,6 +81,6 @@ setInterval(run, 3000);
   </head>
    <body>
  
-      <iframe id="full-screen-me" src="https://shiftclocker.com/test2/dcare" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%" frameborder="0" wmode="transparent"></iframe>
+      <iframe id="full-screen-me" src="https://shiftclocker.com/test2/dcare" allow="geolocation *;" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%" frameborder="0" wmode="transparent"></iframe>
   </body>
 </html>
